# DIYSqueezeNet

./: README.md  README.txt  fire_mod.py  huffman_opt.py  model.py  preprocess.py  pruning.py  quantization.py  run.py
ESP32_Demo_Classifier/: CMakeLists.txt  README.md
ESP32_Demo_Classifier/demo_images/: README.md
ESP32_Demo_Classifier/main/: CMakeLists.txt  image_provider.h  intel6_image_model_data.h  main_functions.cc  main_functions.h  model_settings.cc  model_settings.h
ESP32_Demo_Classifier/main/esp32_interfacing/: app_camera_esp.h
